// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`compare > #ff0044 with oklab(0 0 0) should return an analysis 1`] = `
{
  "brightnessDifference": 83.997,
  "colorDifference": 323,
  "compliant": 0,
  "contrast": 5.34,
  "largeAA": true,
  "largeAAA": true,
  "normalAA": true,
  "normalAAA": false,
}
`;

exports[`compare > #ff0044 with rgb(221, 0, 255) should return an analysis 1`] = `
{
  "brightnessDifference": 11.152,
  "colorDifference": 221,
  "compliant": 0,
  "contrast": 1.03,
  "largeAA": false,
  "largeAAA": false,
  "normalAA": false,
  "normalAAA": false,
}
`;

exports[`compare > #fff with rgb(119, 119, 119) should return an analysis 1`] = `
{
  "brightnessDifference": 136,
  "colorDifference": 408,
  "compliant": 1,
  "contrast": 4.48,
  "largeAA": true,
  "largeAAA": false,
  "normalAA": false,
  "normalAAA": false,
}
`;

exports[`compare > hsl(344, 100%, 50%) with oklch(1 0 0) should return an analysis 1`] = `
{
  "brightnessDifference": 171.003,
  "colorDifference": 442,
  "compliant": 1,
  "contrast": 3.94,
  "largeAA": true,
  "largeAAA": false,
  "normalAA": false,
  "normalAAA": false,
}
`;

exports[`compare > oklab(0 0 0) with oklch(1 0 0) should return an analysis 1`] = `
{
  "brightnessDifference": 255,
  "colorDifference": 765,
  "compliant": 2,
  "contrast": 21,
  "largeAA": true,
  "largeAAA": true,
  "normalAA": true,
  "normalAAA": true,
}
`;

exports[`compare > rgb(255, 0, 68) with #00ffbb should return an analysis 1`] = `
{
  "brightnessDifference": 87.006,
  "colorDifference": 629,
  "compliant": 1,
  "contrast": 3,
  "largeAA": true,
  "largeAAA": false,
  "normalAA": false,
  "normalAAA": false,
}
`;
